Overflow issue resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,7 +67,7 @@ Chrome
 /* Custom scroll bar Firefox */
 .sidebar {
     overflow-y: scroll;
-    /* -webkit-overflow-scrolling: touch; */
+    -webkit-overflow-scrolling: touch;
     scrollbar-color: #f7be32 #ddd !important;
     scrollbar-width: 3px !important;
 }
